clang/test/BSC/Negative/Ownership/Owned/use_uninit_owned/use_uninit_owned.cbs
// RUN: %clang_cc1 -verify %s

int * _Owned test() {
	int * _Owned a;
	return a;        // expected-error {{use of uninitialized value: `a`}}
}
